[fix] update css osm, add z-index to marker to always on top

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -41,4 +41,8 @@
   .btn--small {
     @apply h-8 text-base leading-4;
   }
+  .text--shadow-white {
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff,
+      -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+  }
 }
